# PungliOS

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT.md  PlanPRD.md  README.md  RULES.md  TODO.md  context7.json
.cargo/: config.toml
benches/: phase2.rs  routing.rs  traits.rs
src/: lib.rs  main.rs
src/accounting/: api.rs  ip_accounting.rs  mod.rs
src/address_list/: api.rs  list.rs  mod.rs
src/api/: handlers.rs  mod.rs  monitoring.rs
src/backup/: api.rs  mod.rs  scheduler.rs
src/billing/: backend.rs  mod.rs  types.rs
src/bonding/: api.rs  backend.rs  mod.rs  types.rs
src/bpf_qos/: backend.rs  mod.rs  pcq.rs  types.rs
src/bridge/: filter.rs  igmp.rs  igmp_proxy.rs  isolation.rs  mod.rs  stp.rs
src/cli/: mod.rs  tui.rs
src/cli/commands/: config.rs  firewall.rs  interface.rs  mod.rs  qos.rs
src/cloud/: api.rs  ddns.rs  mod.rs
src/config/: mod.rs  schema.rs  storage.rs  transaction.rs
src/conntrack/: fast_track.rs  mod.rs  tuning.rs
src/dhcp/: mod.rs  radius.rs  relay.rs  snooping.rs  types.rs
src/dhcp_client/: api.rs  client.rs  mod.rs
src/dns/: doh.rs  dot.rs  mod.rs  static.rs  types.rs
src/dot1x/: api.rs  auth.rs  mod.rs
src/firewall/: chain.rs  conn_state.rs  layer7.rs  mangle.rs  mod.rs  nat.rs  rule.rs  zone.rs
src/graphs/: api.rs  mod.rs  rrd.rs
src/health/: api.rs  mod.rs  monitor.rs
src/hotspot/: api.rs  auth.rs  mod.rs  redirect.rs  session.rs
src/ipsec/: api.rs  mod.rs  strongswan.rs
src/ipv6/: api.rs  dhcp_relay.rs  dhcpv6.rs  firewall.rs  mod.rs  radvd.rs
src/l2tp/: api.rs  mod.rs  session.rs  tunnel.rs
src/lldp/: agent.rs  api.rs  mndp.rs  mod.rs
src/lte/: api.rs  mod.rs  modem.rs
src/mpls/: api.rs  ldp.rs  mod.rs
src/net/: backend.rs  bridge.rs  bridge_vlan.rs  iface.rs  mod.rs  proxy_arp.rs  route.rs  vlan.rs
src/netwatch/: api.rs  mod.rs  watcher.rs
src/ntp/: api.rs  client.rs  mod.rs  server.rs
src/plugins/: registry.rs  types.rs
src/pppoe/: auth.rs  discovery.rs  failover.rs  mod.rs  session.rs  types.rs
src/qos/: burst.rs  class.rs  fq_codel.rs  htb.rs  mod.rs
src/radius/: coa.rs  mod.rs
src/routing/: backend.rs  bfd.rs  bgp_inject.rs  bgp_real.rs  filters.rs  filters_real.rs  mod.rs  ospf_real.rs  ospf_spf.rs  ospf_v3.rs  pbr.rs  rip.rs  types.rs
src/scheduler/: api.rs  mod.rs  task.rs
src/snmp/: agent.rs  api.rs  mib.rs  mod.rs
src/snmp/mib/: mib2.rs  (+1 more)
src/ssh/: api.rs  mod.rs  server.rs
src/syslog/: api.rs  mod.rs  syslog.rs
src/tenancy/: backend.rs  types.rs
src/tools/: api.rs  bw_test.rs  email.rs  mod.rs  ping.rs  torch.rs  traceroute.rs  traffic_gen.rs  wol.rs
src/traffic_flow/: api.rs  exporter.rs  mod.rs
src/traits/: mock.rs  mod.rs  netlink.rs
src/tunnel/: api.rs  eoip.rs  gre.rs  mod.rs
src/upgrade/: api.rs  mod.rs  upgrade.rs
src/upnp/: api.rs  mod.rs  nat.rs
src/user/: backend.rs  mod.rs  types.rs
src/vrf/: api.rs  mod.rs  table.rs
src/vrrp/: backend.rs  mod.rs  types.rs
src/watchdog/: api.rs  mod.rs  watchdog.rs
src/web/: mod.rs
src/wireguard/: backend.rs  mod.rs  real.rs  types.rs
templates/: base.html  bgp.html  billing.html  dashboard.html  dhcp.html  dns.html  failover.html  firewall.html  interfaces.html  monitoring.html  nat.html  ospf.html  packages.html  qos.html  routes.html  routing_table.html  sessions.html  users.html  vrrp.html  wireguard.html
tests/common/: mod.rs
tests/integration/: .gitkeep  mod.rs  test_all_managers.rs  test_pppoe_radius_user.rs
