[package]
name = "punglios"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Rust-Native ISP/WISP Management Platform"
authors = ["PungliOS Team"]

[package.metadata.docs.rs]
features = ["api", "web", "mock"]

[features]
default = ["mock"]
mock = []                              # In-memory mock backend (tests / Windows dev)
real = ["dep:nftnl", "dep:nlink", "dep:libc"]      # Production backend via netlink (Linux only)
api = ["dep:axum", "dep:tower", "dep:tokio-stream"]
web = ["api", "dep:tera"]              # Web UI dashboard (includes API)

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# CLI
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
rkyv = { version = "0.7", features = ["validation"] }

# Serialization
bincode = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Utilities
argon2 = { version = "0.5", features = ["std"] }
futures = "0.3"
libc = { version = "0.2", optional = true }
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }

# Real backend: kernel interface (Linux only, optional)
nftnl = { version = "0.9", optional = true }
nlink = { version = "0.17", features = ["full"], optional = true }

# HTTP API (optional)
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
serde_json = "1"

# Web UI (optional, requires api)
tera = { version = "1", optional = true }

[build-dependencies]

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
tempfile = "3"

[lib]
name = "punglios"

[[bench]]
name = "traits"
harness = false

[[bench]]
name = "phase2"
harness = false

[[bench]]
name = "routing"
harness = false
